[tool.poetry]
name = "autoscaler"
version = "2.0"
description = ""
authors = ["Natalia Maximo <iam@natalia.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = {version = "^0.20.0", extras = ["standard"]}
pydantic = {version = "^2.1.1", extras = ["dotenv"]}
gunicorn = "^21.2.0"
loguru = "^0.7.0"
httpx = "^0.24.1"
cryptography = "^42.0.4"
docker = "^6.1.3"
pydantic-settings = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
flake8 = "^6.0.0"
mypy = "^0.991"
black = "^22.10.0"
Flake8-pyproject = "^1.2.1"
pytest-sugar = "^0.9.6"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0.2"
bandit = {extras = ["toml"], version = "^1.7.4"}
pydocstyle = "^6.1.1"


[tool.poetry.group.cli.dependencies]
typer = "^0.7.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "routes: tests for api routes",
    "unit"
]
addopts = "--cov=src --cov-report=term-missing"

[tool.flake8]
exclude = ".git,__pycache__,dist,build,debian,*.egg,*.egg-info,*.venv,*.archive,migrations"
max-line-length = 88
filename = "*.py"
max-complexity = 10

[tool.mypy]
files = ["src/**/*.py"]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.bandit]
exclude_dirs = ['tests']
targets = ['src']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"